--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
+  flutter_conditional_rendering: ^2.0.0
+  bloc: ^7.0.0
+  flutter_bloc: ^7.1.0
+  hexcolor: ^2.0.4
+  shared_preferences: ^2.0.6
+  smooth_page_indicator: ^0.3.0-nullsafety.0
+  fluttertoast: ^8.0.8
+  carousel_slider: ^4.0.0
+  image_picker: ^0.8.3+1
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +55,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -60,17 +70,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: janna
+      fonts:
+        - asset: assets/fonts/janna.ttf
+          weight: 700
+
+    - family: Iconly-Broken
+      fonts:
+        - asset: assets/fonts/iconly.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
