--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,25 @@ dependencies:
   fluttertoast: ^8.0.8
   carousel_slider: ^4.0.0
   image_picker: ^0.8.3+1
+  rounded_loading_button: ^2.0.3
+  gender_picker: ^1.1.0
+
+  #firebase
+  firebase_core: ^1.5.0
+  firebase_auth: ^3.0.2
+  cloud_firestore: ^2.5.0
+  firebase_storage: ^10.0.2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.1"
   flutter_test:
     sdk: flutter
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
