--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.3+1
   rounded_loading_button: ^2.0.3
   gender_picker: ^1.1.0
+  kf_drawer: ^1.2.0
 
   #firebase
   firebase_core: ^1.5.0
