--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   gender_picker: ^1.1.0
   kf_drawer: ^1.2.0
   provider: ^5.0.0
-
+  textfield_tags: ^1.4.2
   #firebase
   firebase_core: ^1.5.0
   firebase_auth: ^3.0.2
