--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,13 @@ dependencies:
   kf_drawer: ^1.2.0
   provider: ^5.0.0
   textfield_tags: ^1.4.2
+  timeago: ^3.1.0
   #firebase
   firebase_core: ^1.5.0
   firebase_auth: ^3.0.2
   cloud_firestore: ^2.5.0
   firebase_storage: ^10.0.2
+
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.1"
