--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_conditional_rendering: ^2.0.0
   bloc: ^7.0.0
   flutter_bloc: ^7.1.0
-  hexcolor: ^2.0.4
+#  hexcolor: ^2.0.4
   shared_preferences: ^2.0.6
   smooth_page_indicator: ^0.3.0-nullsafety.0
   fluttertoast: ^8.0.8
@@ -44,6 +44,7 @@ dependencies:
   provider: ^5.0.0
   textfield_tags: ^1.4.2
   timeago: ^3.1.0
+  shimmer: ^2.0.0
   #firebase
   firebase_core: ^1.5.0
   firebase_auth: ^3.0.2
